agrega lista de precios, instagram y correccion

--- a/html/index-saas2.html
+++ b/html/index-saas2.html
@@ -73,7 +73,7 @@
                 <div class="container pt90 pb90">
                     <h3 class="text-center section-title mb70">¿Qué elaboramos?</h3>
                     <div class="row">
-                                Producimos alimentos a base de masas como tequeños, empanaditas, discos de masa fácil, todos en una variedad de mezclas, sabores y formatos, incluyendo opciones integrales y libres de gluten. También ofrecemos una línea de productos de panificación, como pan de jamón, pan de queso, pan de queso con guayaba, golfeados y roles de canela.Todos nuestros productos se venden congelados, empacados al vacío y rotulados, garantizando la mejor calidad y frescura.
+                                Producimos alimentos a base de masas como tequeños, empanaditas, discos de masa fácil, todos en una variedad de mezclas, sabores y formatos, incluyendo opciones integrales y libres de gluten. También ofrecemos una línea de productos de panificación, como pan de jamón, pan de queso, pan de queso con guayaba, golfeados y roles de canela. Todos nuestros productos se venden congelados, empacados al vacío y rotulados, garantizando la mejor calidad y frescura.
                             </p>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                                 Tequecoso es una fábrica, por lo que no contamos con punto de venta directo.
                             </p>
                             <ul class="list-unstyled feature-list text-white-gray">
-                                <li>todos nuestros productos se envían a través de despachos.</li>
+                                <li>Todos nuestros productos se envían a través de despachos.</li>
                                 <li>Tenemos aliados comerciales en la región de Ñuble y en Calama</li>
                                 <li>Para las entregas a otras regiones, utilizamos cajas de plumavit y transporte refrigerado,
                                     asegurando que los productos lleguen en perfectas condiciones</li>
@@ -101,41 +101,14 @@
 
                     </div>
                 </div>
-            </div><!--feature-img-->
-            <div class="bg-white pt90 pb50">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class='col-lg-6 pb40'>
-                            <img src="images/mockup8.png" alt="" class="img-fluid">
-                            <div class='font12 text-center pt10'>Image Credit - Dribbble</div>
-                        </div>
-                        <div class="col-lg-5 ml-auto pb40">
-                            <h6 class='section-subtitle'>Say more with less</h6>
-                            <h2>Well commented code & valid layouts</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            </p>
-                            <a href='#' class='btn btn-outline-secondary btn-rounded'>Buy Now</a>
-                        </div>
-
-                    </div>
-                </div>
-            </div><!--feature-img-->
+            
+            </div><!--Lista de precios-->
             <div class="bg-faded pt90 pb50">
                 <div class="container">
-                    <div class="row align-items-center">
-
-                        <div class="col-lg-5 pb40">
-                            <h6 class='section-subtitle'>Say more with less</h6>
-                            <h2>Fully built in Sass. Customize style easy</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            </p>
-                            <a href='#' class='btn btn-outline-primary btn-rounded'>Buy Now</a>
+                    <div class="row align-items-center">                                        
                         </div>
-                        <div class='col-lg-6 ml-auto pb40'>
-                            <img src="images/slide4.png" alt="" class="img-fluid">
-                            <div class='font12 text-center pt10'>Image Credit - Dribbble</div>
+                        <div class="item text-center">
+                            <img src="images/lista.jpg" alt="Lista de precios" class="img-fluid">                            
                         </div>
                     </div>
                 </div>
@@ -188,7 +161,7 @@
                     <div class="row">
                         <div class="col-lg-4 mb40">
                             <h5 class="mb10">¿Qué nos diferencia?<i class="icon-bubble-question"></i></h5>
-                            <p> En Tequecoso, entendemos que cada cliente es tan exclusivo como sus intereses y necesidades. Por eso, tomamos el tiempo necesario para escucharlo, conocerlo y ofrecerle una propuesta adecuada a lo que necesita. Además, ofrecemos degustaciones coordinadas, y nuestro seguimiento y relación con el cliente es completamente personalizado.
+                            <p> En Tequecoso, entendemos que cada cliente es tan exclusivo como sus intereses y necesidades. Por eso, tomamos el tiempo necesario para escucharlo, conocerlo y ofrecerle una propuesta adecuada a lo que necesita. Además, ofrecemos degustaciones coordinadas. 
                             </p>
                         </div><!--faq col-->
                         <div class="col-lg-4 mb40">
@@ -236,6 +209,12 @@
                             <a href="https://www.facebook.com/people/Tequecoso/61554650150974/" class="social-icon si-dark si-facebook si-dark-round">
                                 <i class="fa fa-facebook"></i>
                                 <i class="fa fa-facebook"></i>
+                            </a>
+                        </span>
+                        <span>
+                            <a href="https://www.instagram.com/tequecoso/" class="social-icon si-dark si-instagram si-dark-round">
+                                <i class="fa fa-instagram"></i>
+                                <i class="fa fa-instagram"></i>
                             </a>
                         </span>
                     </div>
