--- a/html/index-saas2.html
+++ b/html/index-saas2.html
@@ -160,17 +160,17 @@
                     <h3 class="section-title mb70">Lo que nos Hace Únicos</h3>
                     <div class="row">
                         <div class="col-lg-4 mb40">
-                            <h5 class="mb10">¿Qué nos diferencia?<i class="icon-bubble-question"></i></h5>
+                            <h5 class="mb10">¿Qué nos diferencia?</h5>
                             <p> En Tequecoso, entendemos que cada cliente es tan exclusivo como sus intereses y necesidades. Por eso, tomamos el tiempo necesario para escucharlo, conocerlo y ofrecerle una propuesta adecuada a lo que necesita. Además, ofrecemos degustaciones coordinadas. 
                             </p>
                         </div><!--faq col-->
                         <div class="col-lg-4 mb40">
-                            <h5 class="mb10">Nuestra Misión<i class="icon-bubble-question"></i></h5>
+                            <h5 class="mb10">Nuestra Misión</h5>
                             <p>
                                 Más allá de proveer productos de excelente calidad, nuestra misión es generar una experiencia culinaria única alrededor de una mesa o celebración que evoque recuerdos, genere sonrisas y llene el alma de nuestros clientes.                            </p>
                         </div><!--faq col-->
                         <div class="col-lg-4 mb40">
-                            <h5 class="mb10">Nuestra Visión<i class="icon-bubble-question"></i></h5>
+                            <h5 class="mb10">Nuestra Visión</h5>
                             <p>  Posicionarnos en el territorio nacional como la marca más esperada en cada celebración, siendo un referente en calidad y servicio.                            </p>
                         </div><!--faq col-->
                     </div>
@@ -204,7 +204,7 @@
             <div class="container">
                 <div class="row">
                     <div class="social-buttons col-lg-3 mb30">
-                        <h5 class=" mb20">Follow Us</h5>
+                        <h5 class=" mb20">Siguenos en redes sociales</h5>
                         <span>
                             <a href="https://www.facebook.com/people/Tequecoso/61554650150974/" class="social-icon si-dark si-facebook si-dark-round">
                                 <i class="fa fa-facebook"></i>
@@ -219,11 +219,11 @@
                         </span>
                     </div>
                     <div class='col-lg-3'>
-                        <h5 class=" mb20">Call Us</h5> 
+                        <h5 class=" mb20">Teléfono</h5> 
                         <p class='lead'>+56 9 1234 5678</p>
                     </div>
                      <div class='col-lg-3'>
-                        <h5 class=" mb20">Mail Us</h5> 
+                        <h5 class=" mb20">Correo electronico</h5> 
                         <p class='lead'>contacto@tequecoso.com</p>
                     </div>
                     </div>
