agrega lista de precios, Contactos y correciones varias/ agrega contacto a la barra de navegacion

--- a/html/index-saas2.html
+++ b/html/index-saas2.html
@@ -39,7 +39,10 @@
                             <a class="nav-link" data-scroll href="#reviews">Productos</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link" data-scroll href="#faqs">Faqs</a>
+                            <a class="nav-link" data-scroll href="#faqs">Conocenos</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link" data-scroll href="#Contacto">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -200,6 +203,8 @@
                 </div>
             </main><!--main-content-->            
         </div>
+        
+        <section id="Contacto"></section>
         <footer class="footer">
             <div class="container">
                 <div class="row">
